# bevy_infinite_grid

./: .gitignore  Cargo.toml  LICENSE  OWNERS  README.md  rust-toolchain.toml  toolchain.toml
.github/workflows/: release.yml  rust.yml
examples/: render_layers.rs  simple.rs  simple_2d.rs
src/: grid.wgsl  grid_2d.wgsl  lib.rs  render.rs  render_2d.rs  shader.wgsl
src/render/: grid.wgsl  mod.rs  plane_render.wgsl  shadow.rs  shadow_render.wgsl
