[package]
name = "bevy_infinite_grid"
version = "0.5.1"
authors = [
    "Nile <therawmeatball@gmail.com>",
    "Foresight Mining Software Corporation",
]
edition = "2021"
description = "A 3D infinite grid for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid"
documentation = "https://docs.rs/bevy_infinite_grid"
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"

[dev-dependencies]
bevy_flycam = "0.8"

# [patch.crates-io]
# bevy = { path = "../bevy" }
