[package]
name = "bevy_infinite_grid"
version = "0.5.2"
authors = [
    "Nile <therawmeatball@gmail.com>",
    "Foresight Mining Software Corporation",
]
edition = "2021"
description = "A 3D infinite grid for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid"
documentation = "https://docs.rs/bevy_infinite_grid"
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_asset"] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_winit", "x11"] }
bevy_flycam = "0.8"

# [patch.crates-io]
# bevy = { path = "../bevy" }
